# claude_test

./: ai_helpful_code.py  auto_project_builder.py  b.py  create_big_project.py  requirements.txt
big_project/: CMakeLists.txt
big_project/include/: dpdk_manager.hpp
big_project/src/: dpdk_manager.cpp
test/: foo.py
